Update TestClient, Scripts, Helpers
Signed-off-by: Xerus <27jf@web.de>